# ai-agents-setup

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.json  AGENTS.md  Dockerfile  Dockerfile.opencode  FEATURE_README.md  LICENSE  README.md  TODO.md  Taskfile.yml  config.alloy  docker-compose.feature.yml  docker-compose.obs.yml  docker-compose.yml  install-cli.sh  node_modules  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  services.json  tsconfig.base.json  tsconfig.json
.agents/: api-tasks.md  backend-specialist.md  beads-enforcement.md  db-specialist.md  db-tasks.md  frontend-specialist.md  manager.md  mcp_config.json  researcher.md  swarm-feature-creator.md
.config/mcp/: mcp-servers.json
.config/opencode/: opencode.json
.github/workflows/: ci.yml
.opencode/: opencode.example.json
.opencode/commands/: feature.md  worktree_orchestration.md
.pi/: APPEND_SYSTEM.md  README.md  mcp.json  settings.json
apps/mcp-servers/mcp-ast-service/scanner/: Cargo.toml  ast_scanner_rust.pyi  pyproject.toml
apps/mcp-servers/mcp-ast-service/scanner/src/: lib.rs  main.rs
client/: package.json  tailwind.config.js  tsconfig.app.json
info/: exclude
infra/: docker-compose.feature.yml  docker-compose.obs.yml  docker-compose.opencode.yml  docker-compose.yml  mcp_bridge.py
mcp-ast-service/: Dockerfile  main.py  parsers.py
mcp-database-service/: Dockerfile  package.json  tsconfig.json
samples/: beads_README.md  multi-agent-swarm-frontend.md  session-ses_auth_sample  swarm-feature-creation-full-stack.md  todo.md
server/: drizzle.config.ts  package.json
supabase/: config.toml
tasks/: db.yml  feature.yml  mcp.yml  obs.yml
(+69 files in other folders)
