[package]
name = "ast-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22" 
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-rust = "0.21"
rayon = "1.10"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

