[package]
name = "ast-scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "ast_scanner_rust"   # This MUST match your #[pymodule] name
crate-type = ["cdylib"]

[dependencies]
redis="1.1.0"
r2d2 = "0.8"
r2d2_redis = "0.14"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
tree-sitter = "0.22" 
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-rust = "0.21"
rayon = "1.10"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
